# yc-c0mpiled-hackathon

./: .gitignore  .mcp.json  README.md
backend/: alembic.ini  pyproject.toml
backend/ai_core/: pyproject.toml
backend/ai_core/src/yc_hackathon_ai_core/: __init__.py  analyzer.py  inspector.py  schemas.py
backend/api/: pyproject.toml
backend/api/src/yc_hackathon_api/: database.py  db.py  main.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_tables.py  0002_add_point_analyses.py  0003_add_analysis_detail_columns.py
backend/shared/: pyproject.toml
backend/shared/src/yc_hackathon_shared/: __init__.py  config.py  logging.py
data/inspection/: sop.md
docs/design/: dev_flow.md  requirements.md
docs/memo/: enhance-1.txt  今後の流れ.md
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css  types.ts
frontend/src/api/: client.ts  queries.ts
frontend/src/components/: GuidedCapture.tsx  IdentifyingScreen.tsx  InspectionGuide.tsx  LoadingScreen.tsx  PreviewScreen.tsx  UploadScreen.tsx
frontend/src/routes/: __root.tsx  about.tsx  capture.$sessionId.tsx  index.tsx  inspect.$sessionId.tsx
playground/: README.md  analyze_detail.py  guided_capture.py  inspect_sneaker.py  pyproject.toml
