[project]
name = "yc-hackathon-backend"
version = "0.1.0"
description = "YC Hackathon backend"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "api",
    "ai_core",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "pyright>=1.1.407",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",     # Missing docstrings
    "D203",   # One blank line before class
    "D213",   # Multi-line summary second line
    "D400",   # First line should end with period
    "D415",   # First line should end with punctuation
    "T201",   # print() allowed
    "TRY003", # Long exception messages allowed
    "EM101",  # Exception string literals allowed
    "COM812", # Trailing comma (conflicts with formatter)
    "RUF002", # Ambiguous unicode in docstrings (Japanese)
    "RUF003", # Ambiguous unicode in comments (Japanese)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",    # assert allowed in tests
    "PLR2004", # Magic values allowed in tests
    "ANN",     # Type annotations optional in tests
    "D",       # Docstrings optional in tests
    "ARG",     # Unused arguments (fixtures)
]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["api/src", "ai_core/src"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.pytest.ini_options]
testpaths = ["api/tests", "ai_core/tests"]
addopts = ["--verbose"]
