[project]
name = "yc-hackathon-api"
version = "0.1.0"
description = "FastAPI server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "pydantic>=2.12.4",
    "yc-hackathon-ai-core",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
yc-hackathon-ai-core = { workspace = true }

[dependency-groups]
dev = [
    "uvicorn>=0.38.0",
]
